--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "april2",
-  "author": "Ieva Kaleginiene",
+  "author": "Gytis",
   "keywords": [
     "gatsby"
   ],
@@ -12,7 +12,9 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "lint": "eslint src/**/*.ts",
+    "lint-fix": "eslint src/**/*.ts --fix"
   },
   "dependencies": {
     "@types/node": "^17.0.25",
@@ -38,6 +40,10 @@
   "devDependencies": {
     "@types/react-lazyload": "^3.2.0",
     "@types/styled-components": "^5.1.25",
-    "@types/styled-system": "^5.1.15"
+    "@types/styled-system": "^5.1.15",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
+    "eslint": "^8.25.0",
+    "eslint-plugin-react": "^7.31.10"
   }
 }
